@@ -1,5 +1,6 @@
 plugins {
 	id "org.akhikhl.gretty" version "1.4.2"
+        id "me.champeau.gradle.jmh" version "0.4.5"
 }
 
 allprojects  {
@@ -7,7 +8,7 @@ allprojects  {
   apply plugin: 'eclipse'
 
   group = 'org.it-simulator'
-  version = '1.0.0'
+  version = '1.3.3'
 }
 
 subprojects {
@@ -16,18 +17,20 @@ subprojects {
 	   slf4jVersion = '1.7.24'
 	   log4jVersion = '2.8.1'
 	   junitVersion = '4.12'
-	   jerseyVersion = '2.25.1'
+	   jerseyVersion = '2.26'
 	   powerMockVersion = '1.6.6'
-	   hibernateVersion = '5.2.8.Final'
-       elVersion = '2.2.4'
+	   hibernateVersion = '5.2.12.Final'
+       elVersion = '3.0.0'
        h2Version = '1.4.194'
-       weldVersion = '2.4.1.Final'
-       apacheShiroVersion = '1.3.2'
+       weldVersion = '3.0.1.Final'
+       apacheShiroVersion = '1.4.0'
    }
   
   apply plugin: 'java'
-  sourceCompatibility = 1.8
-  targetCompatibility = 1.8
+  apply plugin: 'me.champeau.gradle.jmh'
+  
+  sourceCompatibility = 1.9
+  targetCompatibility = 1.9
   
   repositories {
     mavenLocal()
@@ -42,7 +45,14 @@ subprojects {
     compile 'org.apache.logging.log4j:log4j-api:' + log4jVersion
     compile 'org.apache.logging.log4j:log4j-core:' + log4jVersion
     compile 'org.apache.commons:commons-lang3:3.5'
+    
     testCompile 'junit:junit:' + junitVersion
+}
+
+test {
+   jvmArgs '--add-modules'
+   jvmArgs 'java.xml.bind'
+   jvmArgs '-Djdk.attach.allowAttachSelf=true'
 }
   
 }
