@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.it-simulator</groupId>
 		<artifactId>germes</artifactId>
-		<version>1.0.0</version>
+		<version>1.3.3</version>
 	</parent>
 	<packaging>war</packaging>
 	<artifactId>germes-admin</artifactId>
@@ -24,7 +24,7 @@
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
-			<version>6.0</version>
+			<version>6.1</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -35,18 +35,18 @@
 		<dependency>
 			<groupId>javax.enterprise</groupId>
 			<artifactId>cdi-api</artifactId>
-			<version>1.2</version>
+			<version>2.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>${h2.version}</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql.version}</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.sun.faces</groupId>
-			<artifactId>jsf-api</artifactId>
-			<version>2.2.14</version>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.faces</artifactId>
+			<version>2.3.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.primefaces.themes</groupId>
@@ -56,12 +56,12 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.16.14</version>
+			<version>1.16.18</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jglue.cdi-unit</groupId>
 			<artifactId>cdi-unit</artifactId>
-			<version>3.1.4</version>
+			<version>4.0.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -108,10 +108,30 @@
 				<directory>src/main/resources</directory>
 				<excludes>
 					<exclude>ui/*.txt</exclude>
+					<exclude>docker/*.*</exclude>
+					<exclude>admin.xml</exclude>
 				</excludes>
 			</resource>
 		</resources>
 		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.6.1</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<compilerArgs>
+						<arg>--add-modules=java.xml.ws.annotation</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>		
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.2.0</version>
+				<configuration>
+					<warName>admin</warName>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
@@ -119,7 +139,7 @@
 				<dependencies>
 					<dependency>
 						<groupId>org.jboss.weld.servlet</groupId>
-						<artifactId>weld-servlet</artifactId>
+						<artifactId>weld-servlet-core</artifactId>
 						<version>${weld.version}</version>
 					</dependency>
 					<dependency>
@@ -130,12 +150,18 @@
 					<dependency>
 						<groupId>org.glassfish</groupId>
 						<artifactId>javax.faces</artifactId>
-						<version>2.2.14</version>
+						<version>2.3.3</version>
 					</dependency>
 					<dependency>
 						<groupId>org.jboss</groupId>
 						<artifactId>jandex</artifactId>
-						<version>2.0.0.Final</version>
+						<version>2.0.3.Final</version>
+					</dependency>
+					<dependency>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>${mysql.version}</version>
+						<scope>runtime</scope>
 					</dependency>
 				</dependencies>
 			</plugin>
